# dir2uf2

./: .gitignore  dir2uf2  pyproject.toml
src/dir2uf2/: dir2uf2.py  gui.py
tests/: test_dir2uf2.py  test_gui.py
